@@ -1,0 +1,16 @@
+#ifndef FLIP_H_INCLUDED
+#define FLIP_H_INCLUDED
+
+struct xformCore {
+    /* a b
+       c d
+    */
+    int a;  /* -1, 0, or 1 */
+    int b;  /* -1, 0, or 1 */
+    int c;  /* -1, 0, or 1 */
+    int d;  /* -1, 0, or 1 */
+};
+
+
+
+#endif
